# ad_api

./: .gitignore  Dockerfile  Makefile  pyproject.toml  test_server.sh
app/: main.py  pyproject.toml  requirements.txt  run.sh
app/config/: ldap_config.py  setting.py
app/core/: logging.py  models.py
app/routers/: glpi_bot.py  user_manager.py
app/services/: ldap_service.py
scripts/: build.sh  clean-full.sh  clean.sh  entrypoint.sh  rebuild.sh  run.sh  stop.sh
src/: main.py
src/ad_api/config/: ldap.py
src/ad_api/routers/: depends.py  glpi_bot.py  user_manager.py
src/ad_api/services/: ldap_service.py
src/app/config/: __init__.py  base.py  di.py  logging.py
src/app/routers/: glpi_bot.py  user_manager.py
src/app/services/: ldap_service.py
src/tests/: test_ldap_service.py
src/tests/hands/: test_register.sh
test/: local_test_mail.sh  test.ps1  test.sh  test_get_mail.sh  test_mail.sh  test_request.sh
