[tool.poetry]
name = "ad-api"
version = "0.1.0"
description = "API for Active Directory"
authors = ["dyuzha <matvey10d@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"
pyyaml = "^6.0.2"
transliterate = "^1.10.2"
ldap3 = "^2.9.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# addopts = "--asyncio-mode=auto"
testpaths = ["tests"]
python_files = "test_*.py"
log_cli = true
log_cli_level = "DEBUG"
env_files = [".env.test"]
